--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pylint pytest
-        python -m pip install --use-pep517
+        python -m pip install --use-pep517 behave
         python pyproject.toml develop
     - name: Lint with pylint
       run: |
