--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -25,10 +24,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: |
+      run: 
+        python -m pip install --upgrade pip|
         python -m pip install pylint pytest
-        python -m pip install --use-pep517 behave
-        python pyproject.toml develop
     - name: Lint with pylint
       run: |
         # stop the build if there are Python syntax errors or undefined names
