--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Install dependencies
       run: 
         python -m pip install --upgrade pip|
+        python -m pip install --upgrade astroid
         python -m pip install pylint pytest
     - name: Lint with pylint
       run: |
