--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,14 +26,11 @@ jobs:
     - name: Install dependencies
       run: 
         python -m pip install --upgrade pip|
-        python -m pip install --upgrade astroid
+        python -m pip install pandas
         python -m pip install pylint pytest
-    - name: Lint with pylint
+    - name: Analysing the code with pylint
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        pylint . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        pylint . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pylint $(git ls-files '*.py')
     - name: Test with pytest
       run: |
         pytest
