--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pandas
         pip install pylint pytest
     - name: Analysing the code with pylint
       run: |
